user can sign in with validation

--- a/views/user/signin.ejs
+++ b/views/user/signin.ejs
@@ -17,7 +17,7 @@
             <div class="card-title">
                 <h1> Sign In to our website!</h1>
             </div>
-            <form action="/users/createSession" method="post">
+            <form action="/users/create-session" method="post">
                 <div class="mb-1">
                     <label for="userEmail">Email</label>
                     <input class="form-control" type="email" name="uemail" id="userEmail">
@@ -34,7 +34,7 @@
                     <a href="/users/signup">Sign up</a>
                 </div>
                 <div class="button-group col-center">
-                    <button type="submit" class="btn btn-1">Sign up</button>
+                    <button type="submit" class="btn btn-1">Log in</button>
                     <button type="button" class="btn btn-1">Cancel</button>
                 </div>
             </form>
